--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,11 @@
-html, body, canvas{
-    overflow: hidden;
-    padding: 0;
-    margin: 0;
+html,
+body,
+canvas {
+	overflow: hidden;
+	padding: 0;
+	margin: 0;
 }
 
-body{
-    background-color: black;
+body {
+	background-color: black;
 }
